Basic flex exercises

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,16 @@ img {
   justify-content: center;
   background: #eee;
 }
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+body {
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 32px;
+}
+
